[package]
name = "anima"
version = "0.1.0"
authors = ["Igor (Abcight) Bunar <contact@abcight.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu"
] }
catppuccin-egui = "3.1.0"
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
