[package]
name = "anima"
version = "0.1.0"
authors = ["Igor (Abcight) Bunar <contact@abcight.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = "0.21.0"
egui_dock = "0.5"
egui-macroquad = "0.15.0"
macroquad = "0.3.25"
glam = "0.24.1"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu"
] }
hematita = "0.1.0"
notify = "6.1.1"
log = "0.4"
rfd = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
syntect = "5.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3.64"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
